WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256854
ASSERTION FAILED: !m_shouldFilterICECandidates || sdp.contains(".local"_s) || sdp.contains(" srflx "_s) in walmart.com
https://bugs.webkit.org/show_bug.cgi?id=256854
Summary
ASSERTION FAILED: !m_shouldFilterICECandidates || sdp.contains(".local"_s) ||...
Kimmo Kinnunen
Reported
2023-05-16 12:15:23 PDT
ASSERTION FAILED: !m_shouldFilterICECandidates || sdp.contains(".local"_s) || sdp.contains(" srflx "_s) 1 0x13888e468 WTFCrash 2 0x280004dc4 PAL::AXCustomContentFunction() 3 0x2828b5ef4 WebCore::PeerConnectionBackend::newICECandidate(WTF::String&&, WTF::String&&, unsigned short, WTF::String&&, std::__1::optional<WebCore::PeerConnectionBackend::DescriptionStates>&&)::$_25::operator()() 4 0x2828b5c5c WTF::Detail::CallableWrapper<WebCore::PeerConnectionBackend::newICECandidate(WTF::String&&, WTF::String&&, unsigned short, WTF::String&&, std::__1::optional<WebCore::PeerConnectionBackend::DescriptionStates>&&)::$_25, void>::call() 5 0x282b7a784 WTF::Function<void ()>::operator()() const 6 0x2828a6a00 void WebCore::ActiveDOMObject::queueTaskKeepingObjectAlive<WebCore::RTCPeerConnection>(WebCore::RTCPeerConnection&, WebCore::TaskSource, WTF::Function<void ()>&&)::'lambda'()::operator()() const 7 0x2828a6918 WTF::Detail::CallableWrapper<void WebCore::ActiveDOMObject::queueTaskKeepingObjectAlive<WebCore::RTCPeerConnection>(WebCore::RTCPeerConnection&, WebCore::TaskSource, WTF::Function<void ()>&&)::'lambda'(), void>::call() 8 0x282b7a784 WTF::Function<void ()>::operator()() const 9 0x2839c64d8 WebCore::EventLoopFunctionDispatchTask::execute() 10 0x2839bbc30 WebCore::EventLoop::run()
https://www.walmart.com/ip/NETGEAR-5-Port-Gigabit-Ethernet-Switch-GS605NA/3910252
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-16 12:15:37 PDT
<
rdar://problem/109417446
>
youenn fablet
Comment 2
2023-05-17 03:14:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13952
EWS
Comment 3
2023-05-17 10:07:29 PDT
Committed
264155@main
(d19ee7dff2de): <
https://commits.webkit.org/264155@main
> Reviewed commits have been landed. Closing PR #13952 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug