ASSERTION FAILED: !m_shouldFilterICECandidates || sdp.contains(".local"_s) || sdp.contains(" srflx "_s) in walmart.com https://bugs.webkit.org/show_bug.cgi?id=256854 rdar://109417446

Reviewed by Eric Carlson.

Updated the debug assert to account for relay candidates which can always be exposed.

* Source/WebCore/Modules/mediastream/PeerConnectionBackend.cpp:
(WebCore::PeerConnectionBackend::newICECandidate):

Canonical link: https://commits.webkit.org/264155@main